projectX/k8sphp-pg/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
        - name: nginx-con
          image: krishsarava/nginx_app:latest
          # ports:
          #   - containerPort: 80  # The container is listening on this port
