projectX/k8sphp-pg/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-postgres-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-pod
  template:
    metadata:
      labels:
        app: php-pod
    spec:
      containers:
        - name: php-con
          image: krishsarava/php_app:latest
          ports:
            - containerPort: 9000  # The container is listening on this port
