projectX/k8sphp-pg/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pod
  template:
    metadata:
      labels:
        app: postgres-pod
    spec:
      containers:
        - name: postgres-con
          image: krishsarava/postgres_app:latest
          ports:
            - containerPort: 5432  # Redis listens on this port
