projectX/k8sphp-pg/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service  
spec:
  selector:
    app: php-pod  
  ports:
    - protocol: TCP
      port: 9000   
      targetPort: 9000  
  type: ClusterIP
