projectX/k8sphp-pg/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP  # Default type; makes Redis accessible only within the cluster
  selector:
    app: postgres-pod
  ports:
    - protocol: TCP
      port: 5432       # Service port within the cluster
      targetPort: 5432  # Forward traffic to Redis container port
