projectX/k8sphp-pg/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fe-be
spec:
  podSelector:
    matchLabels:
      app: postgres-pod
      #release: stable
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: php-pod
      ports:
        - protocol: TCP
          port: 5432
